# lumina-engine

./: .gitignore  ARCHITECTURE_REDESIGN.md  CURRENT_STATUS_AND_DELIVERABLE_PLAN.md  Cargo.toml  DEMO_GUIDE.md  GAME_CREATION_PLAN.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
assets/sounds/: README.md
crates/lumina-assets/: Cargo.toml
crates/lumina-audio/: Cargo.toml
crates/lumina-core/: Cargo.toml
crates/lumina-core/src/: app.rs  ecs_app.rs  engine.rs  event.rs  input.rs  lib.rs  math.rs  memory.rs  render_systems.rs  time.rs  utils.rs
crates/lumina-ecs/: Cargo.toml
crates/lumina-ecs/src/: component.rs  entity.rs  lib.rs  query.rs  resource.rs  system.rs  world.rs
crates/lumina-editor/: CURRENT_STATUS.md  Cargo.toml  DEVELOPMENT_CHECKPOINT.md  DOCKABLE_PANEL_PLAN.md  README.md
crates/lumina-editor/examples/: basic_docking.rs  toolbar_demo.rs
crates/lumina-editor/src/: app.rs  assets.rs  dockable_scene_panel.rs  lib.rs  main.rs  panels.rs  project.rs  scene.rs  simple_test.rs  toolbar.rs  ui_integration.rs
crates/lumina-editor/src/layout/: docking.rs  layout_node.rs  mod.rs  panel_trait.rs  splitter.rs  tab_bar.rs  types.rs
crates/lumina-input/: Cargo.toml
crates/lumina-input/src/: button.rs  events.rs  lib.rs  systems.rs
crates/lumina-physics/: Cargo.toml
crates/lumina-render/: ARCHITECTURE.md  Cargo.toml  README.md
crates/lumina-render/src/: buffer.rs  context.rs  error.rs  lib.rs  pipeline.rs  renderer.rs  text.rs  texture.rs  ui.rs  window.rs
crates/lumina-render/src/shaders/: solid.wgsl  texture.wgsl
crates/lumina-scripting/: Cargo.toml
crates/lumina-scripting/src/: lib.rs  visual_scripting.rs
crates/lumina-ui/: Cargo.toml  EASY_API.md  README.md
crates/lumina-ui/examples/: basic_ui.rs  easy_ui_demo.rs  ecs_architecture_demo.rs  ecs_ui_complete.rs  game_prototype.rs  game_prototype_ecs.rs  hello_ui.rs  minimal_demo.rs  modern_widget_gallery.rs  simple_app_demo.rs  simple_demo.rs  simple_test.rs  simple_working_demo.rs  ui_ecs_integration.rs  visual_script_editor.rs  widget_gallery.rs
crates/lumina-ui/src/: app.rs  easy_api.rs  ecs_integration.rs  error.rs  input.rs  lib.rs  theming.rs
crates/lumina-ui/src/editor/: asset_browser.rs  mod.rs  node_editor.rs  project_manager.rs  property_inspector.rs  scene_view.rs
crates/lumina-ui/src/layout/: containers.rs  mod.rs
crates/lumina-ui/src/rendering/: buffers.rs  mod.rs  renderer.rs  shaders.rs  text.rs
crates/lumina-ui/src/rendering/shaders/: texture.wgsl
crates/lumina-ui/src/web/: mod.rs
crates/lumina-ui/src/widgets/: button.rs  canvas.rs  container.rs  draggable.rs  mod.rs  panel.rs  text.rs  text_input.rs
crates/lumina-web-editor/: Cargo.toml
crates/lumina-web-editor/src/: api.rs  lib.rs  main.rs  project.rs  websocket.rs
crates/lumina-web-editor/static/: index.html  rust_ui_demo.html
examples/: README.md  basic_game.rs  simple_render_test.rs
examples/basic-game/: Cargo.toml
examples/basic-game/src/: main.rs
examples/easy-game-creation/: README.md
examples/pong/: Cargo.toml
examples/pong/src/: main.rs
scripts/: build_web.sh
src/: editor.rs  main.rs  runtime.rs
