[package]
name = "lumina-core"
version = "0.1.0"
edition = "2021"
description = "Core systems for the Lumina game engine"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
glam.workspace = true
parking_lot.workspace = true
rayon.workspace = true
smallvec.workspace = true
lumina-scripting = { path = "../lumina-scripting" }
lumina-render = { path = "../lumina-render" }
lumina-ui = { path = "../lumina-ui" }
lumina-ecs = { path = "../lumina-ecs" }
lumina-input = { path = "../lumina-input" }
wgpu.workspace = true
winit.workspace = true

[features]
default = ["logging"]
logging = ["env_logger"]
track-allocations = []

[dependencies.env_logger]
workspace = true
optional = true
