[package]
name = "lumina-render"
version = "0.1.0"
edition = "2021"
description = "Rendering system for the Lumina game engine"
license = "MIT OR Apache-2.0"

[dependencies]
lumina-core = { path = "../lumina-core" }
lumina-ecs = { path = "../lumina-ecs" }
wgpu.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
glam.workspace = true
image.workspace = true
