[package]
name = "pong"
version = "0.1.0"
edition = "2021"
description = "Pong game example demonstrating Lumina Engine capabilities"

[dependencies]
# Core engine crates - demonstrating proper modularization
lumina-core = { path = "../../crates/lumina-core" }
lumina-ecs = { path = "../../crates/lumina-ecs" }
lumina-input = { path = "../../crates/lumina-input" }
lumina-render = { path = "../../crates/lumina-render" }
lumina-ui = { path = "../../crates/lumina-ui" }

# Math and utilities
glam.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
winit.workspace = true
parking_lot.workspace = true
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "pong"
path = "src/main.rs"